2005-06-09  David Hyatt  <hyatt@apple.com>

	Fix from Carston Guenther for bugzilla bug 3236.

	attr(x) should work even if x is not present on the element.

	This is Radar bug #3584466
	
        Reviewed by hyatt

        Test cases added: fast/css-generated-content/013.html

        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSStyleSelector::applyProperty):
        * layout-tests/fast/css-generated-content/013-expected.txt: Added.
        * layout-tests/fast/css-generated-content/013.html: Added.

2005-06-09  Darin Adler  <darin@apple.com>

        Tested by Mark Rowe.

        * layout-tests/fast/js/date-parse-test.html: Updated this test to use a time zone offset
        for one of the test cases that's time zone dependent; was working in CA, US, failing in NZ.

2005-06-08  Anders Carlsson  <andersca@mac.com>

	Reviewed and committed by Maciej.

	- fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3337
	(Support the Mozilla DOMParser and XMLSerializer objects)

	<rdar://problem/3533735> implement Mozilla "DOMParser" extension for use with XMLHTTPRequest

        Test cases added:
        * layout-tests/fast/dom/dom-parse-serialize-display-expected.txt: Added.
        * layout-tests/fast/dom/dom-parse-serialize-display.html: Added.
        * layout-tests/fast/dom/dom-parse-serialize-expected.txt: Added.
        * layout-tests/fast/dom/dom-parse-serialize.html: Added.

	* khtml/ecma/domparser.h:
	* khtml/ecma/domparser.cpp:
	Add files implementing the DOMParser object.

	* khtml/ecma/kjs_window.h:
	* khtml/ecma/kjs_window.cpp:
	Expose DOMParser object.
	
2005-06-07  David Hyatt  <hyatt@apple.com>

	Patch from Brian Campbell.  Make sure the min and max values of slider properly update.
	Fixes bugilla bug 3323, internal Radar # is 4098892.
	
        Reviewed by hyatt

        Test cases added: (Not testable with a layout test)

        * kwq/KWQSlider.mm:
        (QSlider::setMinValue):
        (QSlider::setMaxValue):
